5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1667_2967.log
== TEST (2019-04-16 16:29:58) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input(S/N)

if a1 >= 1.37:
   a2 >= 1.37
	print(var)
	
else:
	a1 < 1.37 
	a2 < 1.37
	print(var)

-- ERROR:
File "XXXX", line 7
    print(var)
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:17) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input(S/N)

if a1 >= 1.37:
	print(var)
	
else:
	a1 < 1.37 
	print(var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input(S/N)
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:45) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("S/N: ")

if a1 >= 1.37:
	print(var)
	
else:
	a1 < 1.37 
	print(var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:14) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("S/N: ")

if a1 >= 1.37:
	print(var)
	
else:
	a1 < 1.37 
	print(var)

-- EXECUTION TIME:
0.177683
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:15) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("S/N: ")

if a1 >= 1.37:
	print(var)
	
else:
	a1 < 1.37 
	print(var)

-- EXECUTION TIME:
0.190044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:15) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("S/N: ")

if a1 >= 1.37:
	print('a1 ' + var)
	
else:
	a1 < 1.37 
	print(var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:35) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("SIM/NAO: ")

if a1 >= 1.37:
	print(var)
	
else:
	a1 < 1.37 
	print(var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:36:00) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("SIM/NAO: ")

if a1 >= 1.37:
	
	print(a1 +" "+var)
	
else:
	a1 < 1.37 
	print(a1 + " " +var)

-- EXECUTION TIME:
0.17207
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:00) 
-- CODE:
a1=float(input("primeiro: "))
a2=float(input("segundo: "))
var=input("SIM/NAO: ")

if a1 >= 1.37:
	
	print(a1 +" "+var)
	
else:
	a1 < 1.37 
	print(a1 + " " +var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:01) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	mensagem =('a '+ var)
	
	print()
	
else:
	a1 < 1.37 
	print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:20) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	mensagem =('a '+ var)
	
	print(mensagem)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:30) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	mensagem =( a + var)
	elif
	print(mensagem)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:31) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	mensagem =( a + var)
	elif
	print(mensagem)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
File "XXXX", line 7
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:36) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	mensagem =( a + var)

	print(mensagem)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:25) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	a = var
	b = a

	print(a + b)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:22) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	a = var
	b = 

	print(a)
		(b)
	
else:
	a1 < 1.37 
	print()

-- EXECUTION TIME:
0.140684
-- ERROR:
  File "/home/codebench/codes/1667/2967/main.py", line 7
    b = 
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:22) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	a = var
	b = 

	print(a)
		(b)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
File "XXXX", line 7
    b = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:23) 
-- CODE:
a=float(input("primeiro: "))
b=float(input("segundo: "))
var=input("SIM/NAO: ")

if a >= 1.37:
	a = var
	b = 

	print(a)
		(b)
	
else:
	a1 < 1.37 
	print()

-- ERROR:
File "XXXX", line 7
    b = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:46:20) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	Ma = sim

	print()
	
else:
	a1 < 1.37 
	print(NAO)

-- EXECUTION TIME:
0.178608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:21) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	Ma = sim

	print()
	
else:
	a1 < 1.37 
	print(NAO)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:55) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	var = SIM

	print(M)
	print(var)
	
else:
	a1 < 1.37 
	print(NAO)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:35) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:11) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.17311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:12) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.111161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:12) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.119435
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:12) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.15155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:13) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.130808
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:13) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.105972
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:13) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.12738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:13) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.126099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:14) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.12635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:14) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.165685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:14) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.120365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:15) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.146198
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:15) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.150724
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:15) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.14298
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:16) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.187018
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:16) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.180577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:16) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.119587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:16) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.106511
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:17) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.143897
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:17) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.170309
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:17) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.19174
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:18) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.193252
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:18) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.232533
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:18) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.367268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:19) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.203128
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:19) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.299185
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:19) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.370716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:19) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.355515
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:20) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.30449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:20) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.271085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:20) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.423934
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:20) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.320942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:20) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.232347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:21) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.44743
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:21) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.203469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:22) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.385601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:22) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.314335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:22) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.352529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:22) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.286056
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:23) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.390057
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:23) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.41523
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:23) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.472508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:23) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.425379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:23) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.35742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:24) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.245451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:24) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.231373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:24) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.156652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:24) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.141122
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:25) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.128197
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:25) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.178037
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:25) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.199614
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1667/2967/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:26) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(var)
else:
	Ma < 1.37 
	print(var)

-- EXECUTION TIME:
0.142027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:18) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(M)
else:
	Ma < 1.37 
	print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:28) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37 (S/N):
	M = Ma
	print(M)
else:
	Ma < 1.37 
	print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:07) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(M)
else:
	Ma < 1.37 
	print(M)

-- EXECUTION TIME:
0.161513
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:08) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(M)
else:
	Ma < 1.37 
	print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:53:08) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	print(M)
else:
	Ma < 1.37 
	print(M)

-- EXECUTION TIME:
0.231519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2967/main.py", line 3, in <module>
    var=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:32) 
-- CODE:
Ma=float(input("primeiro: "))
Mb=float(input("segundo: "))
var=input("SIM/NAO: ")

if Ma >= 1.37:
	M = Ma
	Ma = Ma
	print(M)
	print(Ma)
else:
	Ma < 1.37 
	print(M)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
